<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Long Beach Quick Menu</string>
    <string name="calendar">Calendar</string>
    <string name="campus">Campus</string>
    <string name="parkside_menu">Parkside Menu</string>
    <string name="hillside_menu">Hillside menu</string>
    <string name="beachside_menu">Beachside Menu</string>
    <string name="search">search</string>
    <string name="lunch">Lunch</string>
    <string name="Beachside">Beachside</string>
    <string name="Parkside">Parkside</string>
    <string name="Hillside">Hillside</string>
    <string name="test">Test</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu">Menu</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_Campus">Campus</string>
    <string name="title_Menu">Menu</string>
    <string name="title_Calendar">Calendar</string>
    <string name="menus">Menus</string>
    <string name="noMenu">No dining hall for this day</string>
</resources>