<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/map">

    <ImageView
        android:id="@+id/beachside"
        android:layout_width="0dp"
        android:layout_height="193dp"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="69dp"
        android:contentDescription="@string/Beachside"
        app:layout_constraintBottom_toTopOf="@+id/parkside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hillside"
        app:srcCompat="@drawable/beachside"
        android:layout_marginRight="69dp" />

    <ImageView
        android:id="@+id/hillside"
        android:layout_width="92dp"
        android:layout_height="138dp"
        android:layout_marginBottom="198dp"
        android:layout_marginEnd="41dp"
        android:layout_marginTop="77dp"
        android:contentDescription="@string/Hillside"
        app:layout_constraintBottom_toTopOf="@+id/parkside"
        app:layout_constraintEnd_toStartOf="@+id/beachside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hillside"
        android:layout_marginRight="41dp" />

    <ImageView
        android:id="@+id/parkside"
        android:layout_width="91dp"
        android:layout_height="103dp"
        android:layout_marginBottom="122dp"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="56dp"
        android:contentDescription="@string/Parkside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/beachside"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hillside"
        app:srcCompat="@drawable/parkside"
        android:layout_marginRight="17dp"
        android:layout_marginLeft="56dp" />
</android.support.constraint.ConstraintLayout>